[gd_scene load_steps=7 format=2]

[ext_resource path="res://Escenas/Mundo.gd" type="Script" id=1]
[ext_resource path="res://Escenas/Enemigo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fondos/fondo1.png" type="Texture" id=3]
[ext_resource path="res://Escenas/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Escenas/Interfaz.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.257843, -1.41592, 0, 0, 0, 0, 1024.1, -0.055542, 0, 0, 0, 0, 1022.74, 601.229, 0, 0, 0, 0, 1.10251, 601.229, 0, 0, 0, 0, -0.257843, -1.41592 )
}

[node name="Mundo" type="Node"]

script = ExtResource( 1 )
Enemigo = ExtResource( 2 )

[node name="Fondo" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = -5.0
margin_right = 1025.0
margin_bottom = 603.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0

[node name="Player" parent="." index="1" instance=ExtResource( 4 )]

[node name="EnemigoTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="InicioTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="PosicionDeInicio" type="Position2D" parent="." index="5"]

position = Vector2( 529.076, 271.321 )
_sections_unfolded = [ "Transform" ]

[node name="Camino" type="Path2D" parent="." index="6"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 0, 0.653867 )
scale = Vector2( 1, 0.998912 )
curve = SubResource( 1 )

[node name="enemigo_posicion" type="PathFollow2D" parent="Camino" index="0"]

position = Vector2( -0.257843, -1.41592 )
rotation = 0.00132811
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Interfaz" parent="." index="7" instance=ExtResource( 5 )]

[connection signal="golpe" from="Player" to="." method="game_over"]

[connection signal="timeout" from="EnemigoTimer" to="." method="_on_EnemigoTimer_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]

[connection signal="iniciar_juego" from="Interfaz" to="." method="nuevo_juego"]


